<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hwads="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/text_view_oaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="なし"
                />

            <TextView
                android:id="@+id/text_view_limit_ad_tracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_view_oaid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/limit_ad_tracking_enabled"
                />

            <Button
                android:id="@+id/button_get_advertising_id_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advertising_id_info"
                app:layout_constraintTop_toBottomOf="@+id/text_view_limit_ad_tracking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/button_connect_install_referrer_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_install_referrer_client"
                app:layout_constraintTop_toBottomOf="@+id/button_get_advertising_id_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/button_disconnect_install_referrer_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_install_referrer_client"
                app:layout_constraintTop_toBottomOf="@+id/button_connect_install_referrer_client"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/text_view_reward_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/button_disconnect_install_referrer_client"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="00000"
                />

            <Button
                android:id="@+id/button_reward_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reward_ad"
                app:layout_constraintTop_toBottomOf="@+id/text_view_reward_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/button_interstitial_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interstitial_ad"
                app:layout_constraintTop_toBottomOf="@+id/button_reward_ad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/button_roll_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roll_ad"
                app:layout_constraintTop_toBottomOf="@+id/button_interstitial_ad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <LinearLayout
                android:id="@+id/native_ad_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/button_roll_ad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:id="@+id/ad_display_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/display_form"
                    android:textColor="#000000"
                    android:textSize="@dimen/hiad_text_16_sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group_display_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin">

                        <RadioButton
                            android:id="@+id/radio_button_large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/large" />

                        <RadioButton
                            android:id="@+id/radio_button_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/small" />

                        <RadioButton
                            android:id="@+id/radio_button_video"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_load"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/load_button_text" />
                </LinearLayout>

                <ScrollView
                    android:id="@+id/scroll_view_ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />
            </LinearLayout>

            <com.huawei.hms.ads.instreamad.InstreamView
                android:id="@+id/instream_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/native_ad_area"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.huawei.hms.ads.banner.BannerView
                android:id="@+id/hw_banner_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                hwads:adId="testw6vs28auh3"
                hwads:bannerSize="BANNER_SIZE_360_57"
                app:layout_constraintTop_toBottomOf="@+id/instream_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>